turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: value lenght is not a member of Array[java.awt.Color]
if(n>colors.lenght-2){
            ^